--- a/res/values-bn-rBD/cr_strings.xml
+++ b/res/values-bn-rBD/cr_strings.xml
@@ -62,12 +62,12 @@
     <!-- Share crDroid -->
     <string name="share_crdroid_title">CrDroid শেয়ার করুন</string>
     <string name="share_crdroid_summary">CrDroid সম্পর্কে অন্যদের জানান</string>
-    <string name="share_message">crDroid আপনার ডিভাইসে আছে কিনা দেখুন</string>
+    <string name="share_message">BaikalOS আপনার ডিভাইসে আছে কিনা দেখুন</string>
     <string name="share_chooser_title">CrDroid শেয়ার করুন</string>
     <!-- Sites crDroid -->
     <string name="crdroid_source_title">গিটহাব</string>
     <string name="crdroid_source_summary">আমরা ওপেন সোর্স ভালবাসি, আমাদেরকে দেখুন</string>
-    <string name="crdroid_telegram_title">crDroid সম্প্রদায়</string>
+    <string name="crdroid_telegram_title">BaikalOS সম্প্রদায়</string>
     <string name="crdroid_telegram_summary">আমরা টেলিগ্রামে আছি। আমাদের সাথে যোগদান করুন!</string>
     <string name="crdroid_telegram_channel_title">আপডেট চ্যানেল</string>
     <string name="crdroid_telegram_channel_summary">টেলিগ্রামে নতুন বিল্ড সম্পর্কে বিজ্ঞপ্তি পান</string>
