--- a/res/values-et-rEE/cr_strings.xml
+++ b/res/values-et-rEE/cr_strings.xml
@@ -16,7 +16,7 @@
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <!-- App Title -->
-    <string name="crdroid_settings_title">crDroidi seaded</string>
+    <string name="crdroid_settings_title">BaikalOSi seaded</string>
     <string name="crdroid_settings_summary">Ava hea kraam</string>
     <string name="reset_settings_title">Lähtesta seaded</string>
     <string name="reset_settings_message">See lähtestab valitud kasutaja jaoks enamus CrDroidi seaded vaikeväärtustele. Kas soovid jätkata?</string>
@@ -57,17 +57,17 @@
     <string name="changelog_crdroid_summary">Vaata paigaldatud ROMi muudatusi</string>
     <string name="changelog_crdroid_error">Muudatuste logi ei saanud laadida</string>
     <!-- About crDroid -->
-    <string name="about_crdroid">Info crDroidi kohta</string>
+    <string name="about_crdroid">Info BaikalOSi kohta</string>
     <string name="about_device_name">Seade</string>
     <!-- Share crDroid -->
-    <string name="share_crdroid_title">Jaga crDroidi</string>
-    <string name="share_crdroid_summary">Anna teistele teada crDroidist</string>
-    <string name="share_message">Uuri kas #crDroidAndroid on saadaval sinu seadmele https://crdroid.net/</string>
-    <string name="share_chooser_title">Jaga crDroidi</string>
+    <string name="share_crdroid_title">Jaga BaikalOSi</string>
+    <string name="share_crdroid_summary">Anna teistele teada BaikalOSist</string>
+    <string name="share_message">Uuri kas #BaikalOS on saadaval sinu seadmele https://github.com/BaikalOS-Devices/</string>
+    <string name="share_chooser_title">Jaga BaikalOSi</string>
     <!-- Sites crDroid -->
     <string name="crdroid_source_title">GitHub</string>
     <string name="crdroid_source_summary">Me armastame avatud tarkvara, tutvu meiega</string>
-    <string name="crdroid_telegram_title">crDroid kogukond</string>
+    <string name="crdroid_telegram_title">BaikalOS kogukond</string>
     <string name="crdroid_telegram_summary">Liitu meie Telegrami kommuuniga!</string>
     <string name="crdroid_telegram_channel_title">Uuendustekanal</string>
     <string name="crdroid_telegram_channel_summary">Saa Telegramis uute versioonide teavitusi</string>
