--- a/res/values-fa-rIR/cr_strings.xml
+++ b/res/values-fa-rIR/cr_strings.xml
@@ -16,7 +16,7 @@
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <!-- App Title -->
-    <string name="crdroid_settings_title">تنظیمات crDroid</string>
+    <string name="crdroid_settings_title">تنظیمات BaikalOS</string>
     <string name="crdroid_settings_summary">باز کردن تنظیمات ویژه</string>
     <string name="reset_settings_title">بازنشانی تنظیمات</string>
     <string name="reset_settings_message">با این کار بیشتر تنظیمات crdroid برای کاربر فعلی به مقادیر پیشفرض بازنشانی میشود،دوست دارید ادامه دهید؟</string>
@@ -57,17 +57,17 @@
     <string name="changelog_crdroid_summary">دیدن تغییرات ایجاد شده در این ورژن</string>
     <string name="changelog_crdroid_error">قادر به بارگذاری لیست تغییرات نیست</string>
     <!-- About crDroid -->
-    <string name="about_crdroid">درباره ی crDroid</string>
+    <string name="about_crdroid">درباره ی BaikalOS</string>
     <string name="about_device_name">دستگاه</string>
     <!-- Share crDroid -->
-    <string name="share_crdroid_title">اشتراک گذاری crDroid</string>
-    <string name="share_crdroid_summary">به دیگران crDroid را معرفی کنید</string>
-    <string name="share_message">ببین آیا #crDroidAndroid برای دستگاه شما در دسترس هس @ https://crdroid.net/</string>
-    <string name="share_chooser_title">اشتراک گذاری crDroid</string>
+    <string name="share_crdroid_title">اشتراک گذاری BaikalOS</string>
+    <string name="share_crdroid_summary">به دیگران BaikalOS را معرفی کنید</string>
+    <string name="share_message">ببین آیا #BaikalOS برای دستگاه شما در دسترس هس @ https://github.com/BaikalOS-Devices/</string>
+    <string name="share_chooser_title">اشتراک گذاری BaikalOS</string>
     <!-- Sites crDroid -->
     <string name="crdroid_source_title">گیت‌هاب</string>
     <string name="crdroid_source_summary">ما عاشق open source هستیم، ببینید</string>
-    <string name="crdroid_telegram_title">جامعه crDroid</string>
+    <string name="crdroid_telegram_title">جامعه BaikalOS</string>
     <string name="crdroid_telegram_summary">ما در تلگرام هستیم. به ما بپیوند!</string>
     <string name="crdroid_telegram_channel_title">کانال به‌روزرسانی‌ها</string>
     <string name="crdroid_telegram_channel_summary">در تلگرام از بروزرسانی ها مطلع شوید</string>
