--- a/res/values-tr-rTR/cr_strings.xml
+++ b/res/values-tr-rTR/cr_strings.xml
@@ -16,7 +16,7 @@
 -->
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <!-- App Title -->
-    <string name="crdroid_settings_title">crDroid Ayarları</string>
+    <string name="crdroid_settings_title">BaikalOS Ayarları</string>
     <string name="crdroid_settings_summary">Çeşitli özelleştirmeler</string>
     <string name="reset_settings_title">Ayarları sıfırla</string>
     <string name="reset_settings_message">Bu mevcut kullanıcı için çoğu crdroid ayarlarını varsayılan değerlerine sıfırlar. Devam etmek ister misin?</string>
@@ -57,17 +57,17 @@
     <string name="changelog_crdroid_summary">Yüklü ROM\'daki değişiklikleri görüntüleyin</string>
     <string name="changelog_crdroid_error">Değişiklikler yüklenemiyor</string>
     <!-- About crDroid -->
-    <string name="about_crdroid">crDroid hakkında</string>
+    <string name="about_crdroid">BaikalOS hakkında</string>
     <string name="about_device_name">Cihaz</string>
     <!-- Share crDroid -->
-    <string name="share_crdroid_title">crDroid\'i paylaş</string>
-    <string name="share_crdroid_summary">Başkalarına crDroid hakkında bilgi verin</string>
-    <string name="share_message">Cihazınız için #crDroidAndroid\'in mevcut olup olmadığını kontrol edin @ https://crdroid.net/</string>
-    <string name="share_chooser_title">crDroid\'i paylaş</string>
+    <string name="share_crdroid_title">BaikalOS\'i paylaş</string>
+    <string name="share_crdroid_summary">Başkalarına BaikalOS hakkında bilgi verin</string>
+    <string name="share_message">Cihazınız için #BaikalOS\'in mevcut olup olmadığını kontrol edin @ https://github.com/BaikalOS-Devices/</string>
+    <string name="share_chooser_title">BaikalOS\'i paylaş</string>
     <!-- Sites crDroid -->
     <string name="crdroid_source_title">GitHub</string>
     <string name="crdroid_source_summary">Kaynak kodumuzu görüntüleyin</string>
-    <string name="crdroid_telegram_title">crDroid topluluğu</string>
+    <string name="crdroid_telegram_title">BaikalOS topluluğu</string>
     <string name="crdroid_telegram_summary">Biz de telegramdayız. Bize katılın!</string>
     <string name="crdroid_telegram_channel_title">Güncelleme kanalı</string>
     <string name="crdroid_telegram_channel_summary">Telegram\'daki yeni yapılardan haberdar olun</string>
