--- a/res/xml/crdroid_settings_about.xml
+++ b/res/xml/crdroid_settings_about.xml
@@ -16,7 +16,9 @@
 -->
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
+    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
+    android:title="@string/about_crdroid"
+    >
 
     <!-- crDroid Changelog -->
     <Preference
@@ -30,32 +32,32 @@
     </Preference>
 
     <!-- crDroid Website -->
-    <Preference
+    <!-- Preference
         android:key="crdroid_website"
         android:icon="@drawable/ic_web"
         android:title="@string/crdroid_website_title"
-        android:summary="@string/crdroid_website_summary" />
+        android:summary="@string/crdroid_website_summary" / -->
 
     <!-- crDroid Translate -->
-    <Preference
+    <!-- Preference
         android:key="crdroid_translate"
         android:icon="@drawable/ic_translate"
         android:title="@string/crdroid_translate_title"
-        android:summary="@string/crdroid_translate_summary" />
+        android:summary="@string/crdroid_translate_summary" / -->
 
     <!-- crDroid Share -->
-    <Preference
+    <!-- Preference
         android:key="crdroid_share"
         android:icon="@drawable/ic_share"
         android:title="@string/share_crdroid_title"
-        android:summary="@string/share_crdroid_summary" />
+        android:summary="@string/share_crdroid_summary" / -->
 
     <!-- crDroid Donate -->
-    <Preference
+    <!-- Preference
         android:key="crdroid_donate"
         android:icon="@drawable/ic_donate"
         android:title="@string/donate_crdroid_title"
-        android:summary="@string/donate_crdroid_summary" />
+        android:summary="@string/donate_crdroid_summary" / -->
 
     <!-- crDroid Source -->
     <Preference
@@ -65,41 +67,41 @@
         android:summary="@string/crdroid_source_summary" />
 
     <!-- crDroid Telegram -->
-    <Preference
+    <!-- Preference
         android:key="crdroid_telegram"
         android:icon="@drawable/ic_telegram"
         android:title="@string/crdroid_telegram_title"
-        android:summary="@string/crdroid_telegram_summary" />
+        android:summary="@string/crdroid_telegram_summary" / -->
 
     <!-- crDroid Telegram Updates Channel -->
-    <Preference
+    <!-- Preference
         android:key="crdroid_telegram_channel"
         android:icon="@drawable/ic_telegram_channel"
         android:title="@string/crdroid_telegram_channel_title"
-        android:summary="@string/crdroid_telegram_channel_summary" />
+        android:summary="@string/crdroid_telegram_channel_summary" /-->
 
     <!-- crDroid sponsor -->
-    <Preference
+    <!-- Preference
         android:key="crdroid_sponsor"
         android:icon="@drawable/ic_sponsor"
         android:title="@string/crdroid_sponsor_title"
-        android:summary="@string/crdroid_sponsor_summary" />
+        android:summary="@string/crdroid_sponsor_summary" / -->
 
     <!-- crDroid OTA update -->
-    <Preference
+    <!-- Preference
         android:key="system_update_settings"
         android:title="@string/crdroid_update_title"
         android:summary="@string/crdroid_update_summary"
         android:icon="@drawable/ic_update"
         settings:controller="com.android.settings.system.SystemUpdatePreferenceController">
         <intent android:action="android.settings.SYSTEM_UPDATE_SETTINGS" />
-    </Preference>
+    </Preference -->
 
     <!-- crDroid Drill -->
-    <Preference
+    <!-- Preference
         android:key="crdroid_drill"
         android:icon="@drawable/ic_drill"
         android:title="@string/drill_title"
         android:summary="@string/drill_summary"
-        android:fragment="com.crdroid.settings.fragments.about.Drill" />
+        android:fragment="com.crdroid.settings.fragments.about.Drill" / -->
 </PreferenceScreen>
