--- a/res/xml/crdroid_settings_button.xml
+++ b/res/xml/crdroid_settings_button.xml
@@ -17,8 +17,10 @@
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:lineage="http://schemas.android.com/apk/res-auto"
+    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings"
     android:key="button_settings"
-    xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
+    android:title="@string/button_title"
+    >
 
     <PreferenceCategory
         android:key="extras_category"
